--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,9 +1,11 @@
-footer
-{
+footer {
     background-color: white;
     height: 60px;
     width: 100%;
-    border-top: 1px #CCCCCC;
+    border-top: 1px solid #CCCCCC;
     bottom: 0;
-    position: absolute;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    display: flex;
 }
