--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,14 +1,10 @@
-header
-{
+header {
     background-color: white;
     height: 70px;
     width: 100%;
-    border-bottom: 1px #CCCCCC;
-}
-.logo
-{
-    background-image: url(../images/logo.png);
+    border-bottom: 1px solid #CCCCCC;
+    background-image: url("../images/logo.png");
     background-repeat: no-repeat;
-    height: 100%;
-    background-position: 20px center;
+    background-position: 20px;
+    background-position-y: center;
 }
